fixed view on mobile

--- a/style.css
+++ b/style.css
@@ -10,9 +10,6 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'Fuzzy Bubbles';
-    height: 100%;
-    width: 100vw; 
-    margin: 0 auto;
 }
 
 .version {
@@ -21,7 +18,7 @@ body {
 }
 
 .project {
-    width: 60%;
+    width: 100%;
     height: 50px;
     background-color: white;
     border: 2px solid black;
@@ -32,7 +29,7 @@ body {
 .projects {
     display: flex;
     flex-direction: column;
-    width: 700px;
+    width: 500px;
     height: 400px; 
     justify-content: space-evenly;
     align-items: center;
@@ -119,8 +116,8 @@ body {
     position: absolute; 
     height: 50px;
     width: 50px;
-    margin-left: 800px;
-    background-color: transparent;
+    margin-left: 60%;
+    background-color: inherit;
     border-radius: 5px;
 }
 
@@ -158,6 +155,7 @@ body {
 #disqus_thread {
     width: 90%;
     display: none;
+    margin: 0;
 }
 
 #disqus_thread.show {
@@ -289,16 +287,21 @@ body {
     }
 }
 
-@media (max-width:768px) {
-    body {
-        width: 100%;
+@media (min-width: 320px) and (max-width:480px) {
+    .open-modal {
+        margin-left: 80%;
+        margin-top: 10px;
     }
 
     .access-modal {
-        margin-left: 320px; 
+        margin-left: 40%;
     }
 
-    .open-modal {
-        margin-left: 450px; 
+    .projects {
+        width: 90%;
+    }
+
+    body { 
+        margin: 0;
     }
 }
